--- a/src/main/resources/polyconfig.mixins.json
+++ b/src/main/resources/polyconfig.mixins.json
@@ -1,12 +1,9 @@
 {
   "required": true,
   "minVersion": "0.8",
-  "package": "net.fabricmc.example.mixin",
+  "package": "nl.theepicblock.polyconfig.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
-  ],
-  "client": [
-    "ExampleMixin"
   ],
   "injectors": {
     "defaultRequire": 1
