--- a/build.gradle
+++ b/build.gradle
@@ -11,11 +11,16 @@ version = project.mod_version
 group = project.maven_group
 
 repositories {
-	// Add repositories to retrieve artifacts from in here.
-	// You should only use this when depending on other mods because
-	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
-	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
-	// for more information about repositories.
+	maven {
+		url "https://maven.theepicblock.nl"
+		content {
+			includeGroup("nl.theepicblock")
+			includeGroup("dev.hbeck.kdl") // Mirrored on my maven because Jitpack wouldn't build it and GH packages requires auth
+		}
+	}
+	maven {
+		url "https://maven.nucleoid.xyz"
+	}
 }
 
 dependencies {
@@ -24,13 +29,8 @@ dependencies {
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-	// Uncomment the following line to enable the deprecated Fabric API modules. 
-	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
-
-	// modImplementation "net.fabricmc.fabric-api:fabric-api-deprecated:${project.fabric_version}"
+	modImplementation "nl.theepicblock:PolyMc:${project.polymc_version}"
+	implementation include("dev.hbeck.kdl:kdl4j:0.2.0")
 }
 
 processResources {
