--- a/src/main/resources/polyconfig.mixins.json
+++ b/src/main/resources/polyconfig.mixins.json
@@ -4,7 +4,8 @@
   "package": "nl.theepicblock.polyconfig.mixin",
   "compatibilityLevel": "JAVA_17",
   "mixins": [
-    "OnBuildPolyMap"
+    "OnBuildPolyMap",
+    "FunctionalBlockStatePolyAccessor"
   ],
   "injectors": {
     "defaultRequire": 1
